# huggingface-finetune

./: .gitignore  README.md  app.py  huggingface_finetune.py  huggingfacedemo (1).ipynb  pyproject.toml
steps/: shared.py  step01_auth.py  step02_load_data.py  step03_filter_data.py  step04_streaming.py  step05_custom_dataset.py  step06_tokenizer.py  step07_tokenize_dataset.py  step08_train.py  step09_test_model.py
