[project]
name = "huggingface-finetune"
version = "0.1.0"
description = "Fine-tune DistilBERT on the Emotion dataset using Hugging Face"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub",
    "datasets",
    "pandas",
    "transformers",
    "torch",
    "numpy",
    "accelerate>=1.13.0",
]

[project.scripts]
finetune = "huggingface_finetune:main"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
